--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vercel-build": "npm run build"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.9.0",
     "bancho.js": "^0.12.0",
     "cors": "^2.8.5",
@@ -30,8 +31,5 @@
     "react-select": "^5.10.1",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "concurrently": "^9.1.2"
   }
 }
