--- a/package.json
+++ b/package.json
@@ -14,21 +14,14 @@
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.9.0",
     "bancho.js": "^0.12.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "mongoose": "^8.15.0",
     "node-fetch": "^3.3.2",
     "nodesu": "^0.7.3",
-    "passport": "^0.6.0",
-    "passport-twitch-new": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.1",
-    "react-toastify": "^9.1.3",
-    "web-vitals": "^2.1.4"
+    "react-toastify": "^9.1.3"
   }
 }
