--- a/package.json
+++ b/package.json
@@ -1,27 +1,44 @@
 {
-  "name": "beatsync",
-  "author": {
-    "name": "Adivise"
-  },
-  "type": "module",
-  "description": "BeatSync - A full-stack application for osu! requests",
-  "version": "2.6.0",
-  "scripts": {
-    "build": "react-scripts build",
-    "vercel-build": "npm run build"
-  },
-  "dependencies": {
-    "@vercel/analytics": "^1.5.0",
-    "axios": "^1.9.0",
-    "bancho.js": "^0.12.0",
-    "mongoose": "^8.15.0",
-    "node-fetch": "^3.3.2",
-    "nodesu": "^0.7.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "react-scripts": "^5.0.1",
-    "react-select": "^5.10.1",
-    "react-toastify": "^9.1.3"
-  }
+	"name": "beatsync",
+	"author": {
+		"name": "Adivise"
+	},
+	"type": "module",
+	"description": "BeatSync - A full-stack application for osu! requests",
+	"version": "3.0.0",
+	"scripts": {
+		"start": "react-scripts start",
+		"dev": "vercel dev",
+		"build": "react-scripts build",
+		"vercel-build": "npm run build"
+	},
+	"dependencies": {
+		"@vercel/analytics": "^1.5.0",
+		"axios": "^1.9.0",
+		"bancho.js": "^0.12.0",
+		"mongoose": "^8.15.0",
+		"node-fetch": "^3.3.2",
+		"nodesu": "^0.7.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.22.3",
+		"react-scripts": "^5.0.1",
+		"react-select": "^5.10.1",
+		"react-toastify": "^9.1.3"
+	},
+	"devDependencies": {
+		"vercel": "^40.0.0"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
